--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -178,6 +178,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script>
+      // Rà roát lại từng hàm 1 xem chức năng của nó là gì
       let songs = [];
       let currentIndex = 0;
       let selectedIndex = -1; // Variable to track selected suggestion
