--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 ></a>
               </li>
               <li class="nav-item icon">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="./Điểm_danh/index.html"
                   ><i class="fa-solid fa-language"></i
                 ></a>
               </li>
