--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li
               class="nav-item d-flex align-items-center m-1 bg-primary rounded-3"
             >
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="./Điểm_danh/index.html"
                 ><i class="fa-solid fa-language p-2"></i>Teacher
               </a>
             </li>
