--- a/Điểm_danh/index.html
+++ b/Điểm_danh/index.html
@@ -14,6 +14,7 @@
         height: 100vh;
         margin: 0;
         background-color: #f4f4f4;
+        position: relative;
       }
       .container {
         text-align: center;
@@ -21,16 +22,14 @@
         padding: 2rem;
         border-radius: 10px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        position: relative;
       }
-      video {
+      video,
+      canvas {
+        display: block;
+        margin: 0 auto;
         border: 2px solid #333;
         border-radius: 8px;
-        margin-bottom: 1rem;
-      }
-      canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
       }
       button {
         padding: 0.75rem 1.5rem;
@@ -40,9 +39,7 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
-      }
-      button:disabled {
-        background-color: #ccc;
+        margin-top: 1rem;
       }
     </style>
   </head>
@@ -50,34 +47,33 @@
     <div class="container">
       <h1>Facial Recognition Attendance</h1>
       <video id="video" width="640" height="480" autoplay></video>
-      <canvas id="overlay"></canvas>
-      <br />
-      <button id="capture" disabled>Mark Attendance</button>
+      <canvas id="canvas" width="640" height="480"></canvas>
+      <button id="capture">Mark Attendance</button>
     </div>
 
     <script>
       const video = document.getElementById("video");
-      const canvas = document.getElementById("overlay");
+      const canvas = document.getElementById("canvas");
       const captureButton = document.getElementById("capture");
-      let faceMatcher;
+      const ctx = canvas.getContext("2d");
 
       Promise.all([
-        faceapi.nets.tinyFaceDetector.loadFromUri("/models"),
-        faceapi.nets.faceLandmark68Net.loadFromUri("/models"),
-        faceapi.nets.faceRecognitionNet.loadFromUri("/models"),
-        faceapi.nets.ssdMobilenetv1.loadFromUri("/models"),
+        faceapi.nets.tinyFaceDetector.loadFromUri(
+          "https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models"
+        ),
+        faceapi.nets.faceLandmark68Net.loadFromUri(
+          "https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models"
+        ),
+        faceapi.nets.faceRecognitionNet.loadFromUri(
+          "https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models"
+        ),
       ]).then(startVideo);
 
       function startVideo() {
         navigator.mediaDevices
           .getUserMedia({ video: true })
-          .then((stream) => {
-            video.srcObject = stream;
-            captureButton.disabled = false;
-          })
-          .catch((error) => {
-            console.error("Error accessing webcam:", error);
-          });
+          .then((stream) => (video.srcObject = stream))
+          .catch((err) => console.error("Error accessing webcam:", err));
       }
 
       video.addEventListener("play", () => {
@@ -94,14 +90,15 @@
             displaySize
           );
 
-          canvas.getContext("2d").clearRect(0, 0, canvas.width, canvas.height);
+          ctx.clearRect(0, 0, canvas.width, canvas.height);
           faceapi.draw.drawDetections(canvas, resizedDetections);
           faceapi.draw.drawFaceLandmarks(canvas, resizedDetections);
         }, 100);
       });
 
       captureButton.addEventListener("click", () => {
-        alert("Attendance marked! (Facial recognition logic to be expanded)");
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        alert("Attendance marked! (Facial recognition logic will be expanded)");
       });
     </script>
   </body>
