--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -246,7 +246,7 @@
         } catch (error) {
           console.error("Lỗi tải lời bài hát:", error);
           document.getElementById("songLyrics").textContent =
-            "Lời bài hát không khả dụng.";
+            "Đây là bài hát không lời.";
         }
       }
       function searchSong(event) {
