--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -246,7 +246,7 @@
         } catch (error) {
           console.error("Lỗi tải lời bài hát:", error);
           document.getElementById("songLyrics").textContent =
-            "Đây là bài hát không lời.";
+            "Dữ liệu bài hát chưa được cập nhật.";
         }
       }
       function searchSong(event) {
